--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,7 +17,24 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Decode JSON Key and Save
+      run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" | base64 --decode > service-account.json
+
+    - name: Grant Permissions to JSON Key
+      run: chmod 600 service-account.json
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+      
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew bundleRelease
+
+    - name: Upload AAB to Internal testing
+      uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+        packageName: com.refactoring_android.math_skill  # 앱의 패키지명
+        releaseFiles: app/build/outputs/bundle/release/app-release.aab
+        track: internal  # internal, alpha, beta, production 중 선택
+        status: completed
+        mappingFile: app/build/outputs/mapping/release/mapping.txt
