--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,7 +18,7 @@ jobs:
         cache: gradle
 
     - name: Decode JSON Key and Save
-      run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" | base64 --decode > service-account.json
+      run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > service-account.json
 
     - name: Grant Permissions to JSON Key
       run: chmod 600 service-account.json
